<resources>
    <string name="app_name">
        <html><font color="#00000">تطبيق المؤمن</font></html>
    </string>

    <!--Menus-->
    <string name="menu_home">الرئيسية</string>
    <string name="menu_videos">فيديوهات</string>
    <string name="menu_ebadat">قرآن</string>
    <string name="menu_images">صور</string>
    <string name="menu_settings">عبادات</string>
    <string name="background">قم بإختيار التطبيق المناسب</string>

    <!--Tabs Images-->
    <string name="category_places">شائع</string>
    <string name="category_resturants">خلفيات</string>
    <string name="category_photos">المزيد</string>

    <!--Tabs Quran-->
    <string name="lesting_quran_tabe">قرآن</string>
    <string name="reading_quran_tabe">سور</string>
    <string name="search_quran_tabe">بحث</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Drawer Menu-->
    <string name="remove_ads">Remove Ads</string>
    <string name="home">Home</string>
    <string name="pc_wallpapers">PC Wallpapers</string>
    <string name="_4k_wallpapers">4K Wallpapers</string>
    <string name="editor_s_choices">Editor\'s Choices</string>
    <string name="video_wallpapers">Video Wallpapers</string>
    <string name="panorama_wallpapers">Panorama Wallpapers</string>
    <string name="islamic_wallpapers">Islamic Wallpapers</string>
    <string name="categories">Categories</string>
    <string name="saved">Saved</string>
    <string name="share">Theme</string>
    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="about">About</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">privacy policy</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="instagram">Instagram</string>
    <string name="app_version">App version</string>

    <!--Other's-->
    <string name="background2">choose the app</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="homeicon">HomeIcon</string>

</resources>
