<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_item"
        android:icon="@drawable/home_icon"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/videos_item"
        android:icon="@drawable/videos_icon"
        android:title="@string/menu_videos" />

    <item
        android:id="@+id/ebadat_item"
        android:icon="@drawable/ebadat_icon"
        android:title="@string/menu_ebadat" />

    <item
        android:id="@+id/images_item"
        android:icon="@drawable/images_icon"
        android:title="@string/menu_images" />

    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/more_icon"
        android:title="@string/menu_settings" />
</menu>